[package]
name = "chis_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.6", features = ["ws", "macros"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
tokio = {version = "1.40.0", features = ["full"]}
tower-http = {version = "0.6.0", features = ["fs", "cors"]}
